Panama Testing changes